Bug #27748 : Wiki - Visibility Show By Dates option should be disabled on click on other option.    -Fixed the event of hiding Always Until End date and Always After Start Date selection on the selection of Always option.    -Fixed the event of hiding Always Until End date and Always After Start Date on the selection of Hide option.    -Fixed the breadcrumbs of Edit Wiki and View Wiki page.    -Set links to the breadcrumbs according to functionality.    -Set breadcrumbs to Edit wiki and Add wiki according to the functionaity.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -386,7 +386,7 @@ a:focus {
     color: #fff;
     background-color: #428bca;
     border-color: #2C368E;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
 
 }
 .breadcrumb > li + li:before {
@@ -625,7 +625,7 @@ img.small-icon{
     background-color: #104E87;
     border-color: #104E87;
     border-radius: 0px;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     background-color: #104E88;
@@ -660,7 +660,7 @@ img.small-icon{
 .btn.btn-primary.page-settings{
     color: #FFF;
     background-color: #104E87;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
 }
 .input-group-addon {
     padding: 6px 12px;
